--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.1",
     "dayjs": "^1.11.10",
     "emotion-normalize": "^11.0.1",
+    "humps": "^2.0.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
