--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "customize-cra": "^1.0.0",
     "dayjs": "^1.11.10",
     "emotion-normalize": "^11.0.1",
     "humps": "^2.0.1",
